fix mobile header visibility

--- a/src/components/header/navigation/Navigation.module.css
+++ b/src/components/header/navigation/Navigation.module.css
@@ -35,6 +35,7 @@
 }
   
 .mobileMenu {
+    display: none;
     position: fixed;
     top: 0;
     right: -100%;
@@ -43,15 +44,14 @@
     background-color: var(--green);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    transition: right 0.4s ease;
     z-index: 15;
     padding: 80px 20px 20px;
 }
   
 .mobileMenu.show {
+    display: block;
     right: 0;
 }
-
   
 .mobileLinks {
     display: flex;
