--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -2,5 +2,4 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    margin-top: -87px;
 }
